--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main id="main-content">
         <div class="container">
             <h2>Shrimp Scampi</h2>
-            <p class="description">Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.</p>
+            <p class="description">Shrimp scampi is a classic Italian-American delight.</p>
             <img class="thumbnail" src="images/shrimp scampi.jpg" alt ="Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.
             "/>
             <h3> Recipe Ingredients </h3>
