--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <main id="main-content">
         <div class="container">
             <h2>Shrimp Scampi</h2>
-            <p class="description">Shrimp scampi is a classic Italian-American delight.</p>
-            <img class="thumbnail" src="images/shrimp scampi.jpg" alt ="Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.
-            "/>
+            <p class="description">Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.</p>
+            <img class="thumbnail" src="images/shrimp scampi.jpg" alt ="Shrimp scampi is a classic Italian-American delight.">
             <h3> Recipe Ingredients </h3>
             <p> <ul class="list"> 
                 <li> 2 tablespoons butter </li>
@@ -37,7 +36,8 @@
                 <li>⅓ cup chopped parsley</li>
                 <li>Freshly squeezed juice of half a lemon</li>
                 <li>Cooked pasta or crusty bread </li>
-                </ul> </p>
+                </ul> 
+            </p>
                 <h3> Recipe Steps </h3>
                 <p> 
                     <ol class="list">
@@ -49,16 +49,10 @@
                     <li>Stir in the parsley and lemon juice and serve over pasta or accompanied by crusty bread.</li>
                     </ol>
                 </p>
-                <p>
                 <h3>Additional Food images</h3>
-                <img src="images/pasta cooking.jpg" width = "200" alt ="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking."/>
-                </p>
-                <p>
-                <img src="images/shrimp scampi cooking.jpg" width = "200" alt ="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon."/>
-                </p>
-                <p>
-                <img src="images/shrimp cooking.jpg" width = "200" alt ="Shrimp is cooking until it is pink. Shrimp is almost finished cooking."/>
-                </p>
+                <img src="images/pasta cooking.jpg" width = "200" alt ="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking.">
+                <img src="images/shrimp scampi cooking.jpg" width = "200" alt ="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon.">
+                <img src="images/shrimp cooking.jpg" width = "200" alt ="Shrimp is cooking until it is pink. Shrimp is almost finished cooking.">
                  <!-- Anna Torell -->
         </div>
         <div class="container">
