--- a/travel.html
+++ b/travel.html
@@ -100,22 +100,26 @@
             </p>
 
             <h3>Photo Gallery</h3>
-
-            <img src="images/oldtownprague.jpg" alt ="Old Town Prague" width="200">
-            <figcaption>Picture of Prague statues and skyline at sunset </figcaption>
-
-            <img src="images/dancinghouse.jpg" alt ="Prague Dancing House" width="200">
-            <figcaption>Image of famous Prague dancing house landmark</figcaption>
-
-            <img src="images/praguedecor.jpg" alt ="Prague Decor" width="200">
-            <figcaption>Image of decorations from Prague market</figcaption>
-
-            <img src="images/prague3.jpg" alt ="Prague Sculpture" width="200">
-            <figcaption>Image of sculpture in Prague</figcaption>
-
-            <img src="images/lonelyplanet.jpg" alt ="Lonely Planet" width="200">
-            <figcaption>Image of Prague clock, lonely planet, landmark</figcaption>
-            
+            <figure> 
+                <img src="images/oldtownprague.jpg" alt ="Old Town Prague" width="200">
+                <figcaption>Picture of Prague statues and skyline at sunset </figcaption>
+            </figure> 
+            <figure> 
+                <img src="images/dancinghouse.jpg" alt ="Prague Dancing House" width="200">
+                <figcaption>Image of famous Prague dancing house landmark</figcaption>
+            </figure>
+            <figure> 
+                <img src="images/praguedecor.jpg" alt ="Prague Decor" width="200">
+                <figcaption>Image of decorations from Prague market</figcaption>
+            </figure>
+            <figure> 
+                <img src="images/prague3.jpg" alt ="Prague Sculpture" width="200">
+                <figcaption>Image of sculpture in Prague</figcaption>
+            </figure>
+            <figure> 
+                <img src="images/lonelyplanet.jpg" alt ="Lonely Planet" width="200">
+                <figcaption>Image of Prague clock, lonely planet, landmark</figcaption>
+            </figure>
         </div>
 
     </div>
