--- a/pets.html
+++ b/pets.html
@@ -22,7 +22,7 @@
         <div class="container">
             <h2>Honey</h2>
             <p class="description">Honeys favorite thing in the world is swimming. Even if it is the middle of January and half of the lake is frozen, Honey will be in the water. She is a smart swimmer, so when my brother and I go underwater, she will follow our air bubbles and be waiting for us when we come up for air.</p>
-            <img width="400px" src="images/honey_main.jpeg" alt="Honey is a medium-sized golden retriever with honey brown fur. She has a white patch of fur on her chest and her right eye is smaller than her left">
+            <img width="400" src="images/honey_main.jpeg" alt="Honey is a medium-sized golden retriever with honey brown fur. She has a white patch of fur on her chest and her right eye is smaller than her left">
             <p class="description">While most dogs like to chase balls or sticks, Honey likes to chase rocks. She will even chase rocks into the water and stick her whole face in the water to try and find the rock thrown. Chasing rocks is her main form of exercise right now as she refuses to go on walks from our house. If we drive her to another spot and walk from there, Honey will go on a walk but she refuses to leave our driveway when we try to walk from home. Finally one other Honey-ism is that her safe place is bathtubs. Many times our family has woken up in the middle of the night and found Honey is a bathtub</p>
             <h3>Photo Gallery</h3>
             <img width="200" src="images/honey_rock.jpg" alt="Honey playing with a rock">
@@ -42,13 +42,13 @@
             <h2>MiaoMiao</h2>
             <p class="description">MiaoMiao is the best cat in the world, extremely social with other, and vigilant against strangers. Oftentimes you can find her running around the house looking for things to eat. If she consumed anything other than cat food, she immediately throws up. </p>
             <img src="images/MiaoMiao.png" alt="A picture of MiaoMiao resting on her divine throne. A black striped with a hint of silver and brown staring
-            at the camera with green eyes. Has paws under her body." title="MiaoMiao Picture" width="400px">
+            at the camera with green eyes. Has paws under her body." title="MiaoMiao Picture" width="400">
             <p class="description">She is chill and chirpy. Loves to play with anything other than professional cat toys. Also loves sitting on keyboards and joining Zoom calls.</p>
             <h3>Photo Gallery</h3>
-            <img src="images/MiaoMiao Sleeping.png" alt="MiaoMiao Sleeping with Favorite Toy" title="MiaoMiao Sleeping with Toy" width="200px">
-            <img src="images/MiaoMiao Staring.png" alt="MiaoMiao Staring out the Window" title="MiaoMiao Staring" width="200px">
-            <img src="images/MiaoMiao Sunbathing.png" alt="MiaoMiao Sunbathing on Carpet" title="MiaoMiao Sunbathing" width="200px">
-            <img src="images/MiaoMiao in Cabinet.png" alt="MiaoMiao in my Cabinet" title="MiaoMiao Cabinet" width="200px">
+            <img src="images/MiaoMiao Sleeping.png" alt="MiaoMiao Sleeping with Favorite Toy" title="MiaoMiao Sleeping with Toy" width="200">
+            <img src="images/MiaoMiao Staring.png" alt="MiaoMiao Staring out the Window" title="MiaoMiao Staring" width="200">
+            <img src="images/MiaoMiao Sunbathing.png" alt="MiaoMiao Sunbathing on Carpet" title="MiaoMiao Sunbathing" width="200">
+            <img src="images/MiaoMiao in Cabinet.png" alt="MiaoMiao in my Cabinet" title="MiaoMiao Cabinet" width="200">
             <h3>Likes</h3>
             <ul class="likes">
                 <li>Birds</li>
@@ -58,7 +58,6 @@
             <!-- Olivia Ren -->
         </div>
         <!-- Pet 3 -->
-        <div>
             <div class="container">       
                 <h2>Hazel</h2>
 
@@ -92,8 +91,8 @@
                     <li>Hazel likes to go on long walks.</li>
                     <li>Hazel likes tough chewing toys.</li>
                 </ul>
+            </div>
             <!-- Joseph Schaubroeck -->
-        </div>
         <!-- Pet 4 -->
         <div class="container">
             <h2>Biscuit Dog</h2>
