--- a/pets.html
+++ b/pets.html
@@ -45,10 +45,10 @@
             at the camera with green eyes. Has paws under her body." title="MiaoMiao Picture" width="400">
             <p class="description">She is chill and chirpy. Loves to play with anything other than professional cat toys. Also loves sitting on keyboards and joining Zoom calls.</p>
             <h3>Photo Gallery</h3>
-            <img src="images/MiaoMiao Sleeping.png" alt="MiaoMiao Sleeping with Favorite Toy" title="MiaoMiao Sleeping with Toy" width="200">
-            <img src="images/MiaoMiao Staring.png" alt="MiaoMiao Staring out the Window" title="MiaoMiao Staring" width="200">
-            <img src="images/MiaoMiao Sunbathing.png" alt="MiaoMiao Sunbathing on Carpet" title="MiaoMiao Sunbathing" width="200">
-            <img src="images/MiaoMiao in Cabinet.png" alt="MiaoMiao in my Cabinet" title="MiaoMiao Cabinet" width="200">
+            <img src="images/MiaoMiao-Sleeping.png" alt="MiaoMiao Sleeping with Favorite Toy" title="MiaoMiao Sleeping with Toy" width="200">
+            <img src="images/MiaoMiao-Staring.png" alt="MiaoMiao Staring out the Window" title="MiaoMiao Staring" width="200">
+            <img src="images/MiaoMiao-Sunbathing.png" alt="MiaoMiao Sunbathing on Carpet" title="MiaoMiao Sunbathing" width="200">
+            <img src="images/MiaoMiao-in-Cabinet.png" alt="MiaoMiao in my Cabinet" title="MiaoMiao Cabinet" width="200">
             <h3>Likes</h3>
             <ul class="likes">
                 <li>Birds</li>
