--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container">
             <h2>Shrimp Scampi</h2>
             <p class="description">Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.</p>
-            <img class="thumbnail" src="images/shrimp scampi.jpg" alt ="Shrimp scampi is a classic Italian-American delight.">
+            <img class="thumbnail" src="images/shrimp-scampi.jpg" alt ="Shrimp scampi is a classic Italian-American delight.">
             <h3> Recipe Ingredients </h3>
-            <p> <ul class="list"> 
+            <ul class="list"> 
                 <li> 2 tablespoons butter </li>
                 <li>2 tablespoons extra-virgin olive oil</li>
                 <li>4 garlic cloves, minced</li>
@@ -37,9 +37,7 @@
                 <li>Freshly squeezed juice of half a lemon</li>
                 <li>Cooked pasta or crusty bread </li>
                 </ul> 
-            </p>
                 <h3> Recipe Steps </h3>
-                <p> 
                     <ol class="list">
                     <li>In a large skillet, melt butter with olive oil. </li>
                     <li>Add garlic and sauté until fragrant, about 1 minute. </li>
@@ -48,11 +46,10 @@
                     <li>Add shrimp and sauté until they just turn pink, 2 to 4 minutes depending upon their size. </li>
                     <li>Stir in the parsley and lemon juice and serve over pasta or accompanied by crusty bread.</li>
                     </ol>
-                </p>
                 <h3>Additional Food images</h3>
-                <img src="images/pasta cooking.jpg" width = "200" alt ="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking.">
-                <img src="images/shrimp scampi cooking.jpg" width = "200" alt ="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon.">
-                <img src="images/shrimp cooking.jpg" width = "200" alt ="Shrimp is cooking until it is pink. Shrimp is almost finished cooking.">
+                <img src="images/pasta-cooking.jpg" width="200" alt="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking.">
+                <img src="images/shrimp-scampi-cooking.jpg" width="200" alt="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon.">
+                <img src="images/shrimp-cooking.jpg" width="200" alt="Shrimp is cooking until it is pink. Shrimp is almost finished cooking.">
                  <!-- Anna Torell -->
         </div>
         <div class="container">
@@ -82,9 +79,9 @@
             </ol>
 
             <h3>Additional Food images</h3>
-            <img src = "images/dinner_spread.JPG"  alt = "Dinner is served on a round table with pesto pasta in white bowls." height = 300>
-            <img src = "images/pesto-on-a-baguette.jpg"  alt = "Pesto spread on a small slice of white bread." height = 300>
-            <img src = "images/pesto-eggs.jpg"  alt = "Sunny-side-up eggs cooked in pesto on 2 slices of bread on a white plate." height = 300 >
+            <img src="images/dinner_spread.JPG"  alt = "Dinner is served on a round table with pesto pasta in white bowls." height = 300>
+            <img src="images/pesto-on-a-baguette.jpg"  alt = "Pesto spread on a small slice of white bread." height = 300>
+            <img src="images/pesto-eggs.jpg"  alt = "Sunny-side-up eggs cooked in pesto on 2 slices of bread on a white plate." height = 300 >
          
             <!-- Elena Elkin -->
             
