--- a/travel.html
+++ b/travel.html
@@ -18,15 +18,17 @@
     <header><h1>Travel</h1></header>
 </nav>
   <main id="main-content">
+    <div class="large-container">
     <div class="container">
         <h2>  Nanjing Fuzi-Qinhuai </h2>
         <p class="description">Nanjing is a popular city full of Chinese history and old traditional southern kinds of agriculture. As a northern people from China, Nanjing was the first city that I traveled to the region south of the Yangtze River. Confucius Temple - Qinhuai River is the most famous place to show the beauty of Nanjing.</p>
-        <img src="images/nanjing.gif" width = 400 alt = "qinhuai river git at night"> 
+        <img class="gif" src="images/nanjing.gif" width = 400 alt = "qinhuai river git at night"> 
         <img src = "images/qinhuai.JPG" width = 400 alt = "qinhuai river photo at night">
         
         <p class="description">Confucius temple has many traditional temple agricultures inside and many small shops about traditional Nanjing specialties and popular restaurants. There are also many colorful traditional lanterns which made the night of qinhuai more gorgeous. People can also take the “Hua Fang” ( a special kind of ship) to travel around the river and the whole scenery.  </p>
         
         <h3>Photo Gallery</h3>
+        <div class="food-pics">
         <figure> 
             <img src = "images/nj_dragon.JPG"  width = 200 alt = "Two dragons playing with beads carved on the dragon wall of a traditional Chinese building"> 
             <figcaption> Taken in the evening on the other side of the Qinhuai River. </figcaption>
@@ -48,6 +50,7 @@
             <img src = "images/nj_temple.JPG"  width = 200 alt = "The temple  people burn incense and pray for success in the exam"> 
             <figcaption> Upward view at night inside the Jiangnan Examination Hall. </figcaption>
         </figure>
+        </div>
     </div>
     <div class="container">
         <h2>Palo Alto</h2>
@@ -59,6 +62,7 @@
             </p>
 
             <h3>Photo Gallery</h3>
+            <div class="food-pics">
             <figure>
                 <img src="images/paloalto_market.jpg" width = "200" alt="The Sunday farmers market on California Ave
                 ">
@@ -87,6 +91,7 @@
                 <img src="images/paloalto_foothills.jpg" width = "200" alt="Lake at Foothills Park">
                 <figcaption>The lake at Foothills is great for kayaking or canoeing </figcaption>
             </figure>
+            </div>
             <!-- Agnes Mar -->
     </div>
     <div>
@@ -100,6 +105,7 @@
             </p>
 
             <h3>Photo Gallery</h3>
+            <div class="food-pics">
             <figure> 
                 <img src="images/oldtownprague.jpg" alt ="Old Town Prague" width="200">
                 <figcaption>Picture of Prague statues and skyline at sunset </figcaption>
@@ -120,22 +126,25 @@
                 <img src="images/lonelyplanet.jpg" alt ="Lonely Planet" width="200">
                 <figcaption>Image of Prague clock, lonely planet, landmark</figcaption>
             </figure>
+            </div>
         </div>
 
     </div>
     <div class="container">
         <h2>Barcelona, Spain</h2>
             <p class="description">Barcelona is located on the northeastern coast of Spain and is the capital of Catalonia. Barcelona is home to 1.6 million people and contains multiple different historical landmarks and interesting architecture. </p>
-            <img src="images/barcelona_gif.gif" alt="Gif of La Sagrada Familia" width="400">
+            <img class="gif" src="images/barcelona_gif.gif" alt="Gif of La Sagrada Familia" width="400">
             <p class="description">Barcelona is famous for its notable architects including Antoni Gaudí and Lluís Domènech i Montaner. These architects built La Sagrada Familia, Park Guell, and Palau de la Música Catalana which are among the most famous constructions in Barcelona. Both architects are famous for their Modernisme style buildings notable for their distinct colors and organic shapes.</p>
             <h3>Photo Gallery</h3>
+            <div class="food-pics">
                 <img class = "thumbnail" src="images/barcelona_pg1.jpg" alt="A zoomed out image of the city" width="200">
                 <img class = "thumbnail" src="images/barcelona_pg2.jpeg" alt="Park Güell" width="200">
                 <img class = "thumbnail" src="images/barcelona_pg3.jpeg" alt="A shot of Barceloneta" width="200">
                 <img class = "thumbnail" src="images/barcelona_pg4.jpeg" alt="Pont del Bisbe" width="200">
                 <img class = "thumbnail" src="images/barcelona_pg5.jpeg" alt="Arc de triomf" width="200">
+            </div>
     </div>
-    <div></div>
+    </div>
   </main>
 </body>
 </html>
